k8s/deployment-stable.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-jmv-stable
  labels:
    app: api-jmv
    track: stable
spec:
  replicas: 9
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: api-jmv
      track: stable
  template:
    metadata:
      labels:
        app: api-jmv
        track: stable
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: api-jmv
          image: api-jmv:stable
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 8000

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3

          startupProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 18

          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "1024Mi"

          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 5"]
