k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-jmv
  labels:
    app: api-jmv
spec:
  replicas: 2
  revisionHistoryLimit: 5

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: api-jmv
      component: api

  template:
    metadata:
      labels:
        app: api-jmv
        component: api

    spec:
      terminationGracePeriodSeconds: 30

      containers:
        - name: api

          # 🔥 FIX CRÍTICO (CI/CD)
          image: ghcr.io/jorgemave27/api-jmv:latest
          imagePullPolicy: Always

          command: ["/bin/sh", "-c"]
          args:
            - uvicorn app.main:app --host 0.0.0.0 --port 8000

          ports:
            - name: http
              containerPort: 8000

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 20

          startupProbe:
            httpGet:
              path: /health
              port: 8000
            failureThreshold: 18
            periodSeconds: 5

          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "1024Mi"

          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 5"]
