k8s/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-jmv-canary-service
  labels:
    app: api-jmv
    track: canary
spec:
  type: ClusterIP
  selector:
    app: api-jmv
    track: canary
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
