k8s/service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-jmv-stable-service
  labels:
    app: api-jmv
    track: stable
spec:
  type: ClusterIP
  selector:
    app: api-jmv
    track: stable
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
