k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-jmv-service
  labels:
    app: api-jmv
spec:
  type: ClusterIP
  selector:
    app: api-jmv
    component: api
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
