k8s/ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-jmv-stable-ingress
  labels:
    app: api-jmv
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "2m"
spec:
  ingressClassName: nginx
  rules:
    - host: api-jmv.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-jmv-stable-service
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-jmv-canary-ingress
  labels:
    app: api-jmv
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  ingressClassName: nginx
  rules:
    - host: api-jmv.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-jmv-canary-service
                port:
                  number: 80
