k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-jmv-ingress
  labels:
    app: api-jmv
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "2m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: api-jmv.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-jmv-service
                port:
                  number: 80
